[tool.poetry]
name = "yahooquery"
version = "2.3.4"
description = "Python wrapper for an unofficial Yahoo Finance API"
authors = ["Doug Guthrie <douglas.p.guthrie@gmail.com>"]
documentation = "https://yahooquery.dpguthrie.com"
keywords = ["python", "API", "finance", "stocks", "Yahoo Finance"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
requests = "^2.31.0"
pandas = "^2.0.3"
requests-futures = "^1.0.1"
tqdm = "^4.65.0"
lxml = "^4.9.3"
selenium = {version = "^4.10.0", optional = true}
webdriver-manager = {version = "^3.8.6", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
isort = "^5.0.0"
flake8 = "^6.0.0"
mypy = "^1.4.1"
pytest-cov = "^4.1.0"
black = "^23.7.0"
pre-commit = "^3.3.3"
ipython = "^8.0.0"
mkdocs-material = "^9.1.18"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
premium = ["selenium", "webdriver-manager"]
